# service/service.go
@@ -23,3 +23,7 @@ func (s *Service) GetUserByEmail(email string) (user *store.User, err error) {
 func (s *Service) GetUserByID(id int64) (user *store.User, err error) {
 	return s.store.GetUserByID(id)
 }
+
+func (s *Service) CreateBasket(user *store.User, basketName string) (basket *store.Basket, err error) {
+	return s.store.CreateBasket(user, basketName)
+}
